feat: user registration
